Fix Gradle for Gradle 10
update dependencies